[package]
name = "ssfd-rs"
version = "0.1.0"
authors = ["Didy KUPANHY <d.kupanhy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

futures = "0.3.1"
log = "0.4.0"
env_logger = "0.7.1"

actix-web = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
