[package]
name = "ssfd"
version = "0.1.0"
authors = ["Didy <9417799+didy-kpn@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/didy-kpn/ssfd-rs"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

futures = "0.3.1"
log = "0.4.0"
env_logger = "0.7.1"

actix-web = "2.0.0"
actix-files = "0.2.1"
actix-rt = "1.0.0"
